# OCR_project

./: .gitignore  README.md  requirements.txt
notebooks/: 1_OpenImages.ipynb  2_TrainSimpleModel.ipynb  3_EvaluateSimpleModel.ipynb
notebooks/trocr_notebooks_ft/: config.json
src/ocr-notebooks/: README.md  pyproject.toml
src/ocr-notebooks/conf/base/: catalog.yml  parameters.yml  parameters_data_ingestion.yml  parameters_model_training.yml
src/ocr-notebooks/src/ocr_notebooks/: __init__.py  __main__.py  settings.py
src/ocr-notebooks/src/ocr_notebooks/pipelines/data_ingestion/: __init__.py  nodes.py  pipeline.py
src/ocr-notebooks/src/ocr_notebooks/pipelines/model_training/: __init__.py  nodes.py  pipeline.py
src/ocr-notebooks/src/ocr_notebooks/utils/: dataset_cleaner.py
src/ocr-notebooks/tests/pipelines/data_ingestion/: test_pipeline.py
src/ocr-notebooks/tests/pipelines/model_serving/: test_pipeline.py
src/ocr-notebooks/tests/pipelines/model_training/: test_pipeline.py
src/ocr-serving/: requirements.txt
src/ocr-serving/api/: serve.py
src/ocr-serving/ocr_pipeline/: line_extractor.py  serving.py  word_extractor.py
src/ocr-serving/scripts/: test_line_extractor.py  test_paddleOCR.py  test_serving.py
